--- a/web-animations-next.dev.html
+++ b/web-animations-next.dev.html
@@ -40,6 +40,7 @@
 <script src="src/position-handler.js"></script>
 <script src="src/shape-handler.js"></script>
 <script src="src/property-names.js"></script>
+<script src="src/extension-api.js"></script>
 <script src="src/web-animations-bonus-cancel-events.js"></script>
 <script src="src/web-animations-bonus-object-form-keyframes.js"></script>
 <script src="src/timeline.js"></script>
